# spear-mcp-test

./: README.md  pyproject.toml  start_mcp_server.sh
src/spear_mcp/: __init__.py  __main__.py  server.py  tools.py  tools_nc.py
